--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -8,12 +8,10 @@ jobs:
     name: Deploying to gh-pages
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Node.js for use with actions
-        uses: actions/setup-node@v1.1.0
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
-          version:  12.x
-      - name: Checkout branch
-        uses: actions/checkout@v2
+          node-version: '12'
 
       - name: Clean install dependencies
         run: npm ci
